--- a/Playbooks/nginx.conf.j2
+++ b/Playbooks/nginx.conf.j2
@@ -47,11 +47,13 @@ http {
         location / {
         }
 
-        # {% for ext in exts %}}
-        location /student {
-            proxy_pass http://{{ansible_default_ipv4.address}}:8080/student;
+        {% for ext in exts %}
+        location /{{ext}} {
+            proxy_pass http://{{ansible_default_ipv4.address}}:8080/{{ext}};
         }
-       # {% endfor %}}
+        {% endfor %}
+
+       { if }
         error_page 404 /404.html;
             location = /40x.html {
         }
