Added if condition

--- a/Playbooks/nginx.conf.j2
+++ b/Playbooks/nginx.conf.j2
@@ -53,7 +53,11 @@ http {
         }
         {% endfor %}
 
-       { if }
+       {% if URL == "google.com" %}
+         location /google {
+             proxy_pass https://google.com;
+         }
+       {% endif %}}
         error_page 404 /404.html;
             location = /40x.html {
         }
